bugFix: start screen z-index

--- a/src/components/startInfo/StartInfo.module.css
+++ b/src/components/startInfo/StartInfo.module.css
@@ -15,6 +15,7 @@
     width: 500px;
     opacity: 95%;
     padding: 15px;
+    z-index: 1;
 }
 
 .heading {
